disabled feature for inputing own apikey

--- a/popup.html
+++ b/popup.html
@@ -400,6 +400,9 @@
       </div>
     </div>
 
+    <!-- API Key Section: Commented out for now as API key is already set in config.js 
+         If you want to add it back, uncomment this section and the section in popup.js:87. -->
+         
     <!-- <div class="section">
       <div class="api-key-section">
         <p><strong>Get your free OMDb API key:</strong></p>
@@ -410,9 +413,9 @@
     </div> -->
   </div>
 
-  <div class="footer">
+  <!-- <div class="footer">
     <p>Made with ❤️ for movie lovers</p>
-  </div>
+  </div> -->
 
   <script src="popup.js"></script>
 </body>
